--- a/src/app/core/header-inner/header-inner.component.html
+++ b/src/app/core/header-inner/header-inner.component.html
@@ -223,13 +223,13 @@
     <li mk-dropdown type="list" [isWrapper]="false" class="user user-menu">
       <mk-dropdown-toggle>
         <a #toggleElement>   
-          <img src="assets/img/user1-128x128.jpg" class="user-image" alt="User Image">
+          <img src="assets/img/user-default.png" class="user-image" alt="User Image">
           <span class="hidden-xs">{{currentUser.usuario.nombre_empleado}}</span>
         </a>
       </mk-dropdown-toggle>
       <mk-dropdown-menu>
     <li class="user-header">
-      <img src="assets/img/user1-128x128.jpg" class="img-circle" alt="User Image">
+      <img src="assets/img/user-default.png" class="img-circle" alt="User Image">
       <p>
         {{currentUser.usuario.nombre_empleado}}
       </p>
