--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -1,5 +1,3 @@
-
-
 .btn-orange{
     color: #fff;
     background-color: #ffab00; 
@@ -26,4 +24,19 @@
 
 .search-button {
   margin-right: 8px;
+}
+
+.editable-cell {
+  position: relative;
+}
+
+.editable-cell-value-wrap {
+  padding: 5px 12px;
+  cursor: pointer;
+}
+
+.editable-row:hover .editable-cell-value-wrap {
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
+  padding: 4px 11px;
 }
