--- a/src/app/core/sidebar-left-inner/sidebar-left-inner.component.html
+++ b/src/app/core/sidebar-left-inner/sidebar-left-inner.component.html
@@ -1,10 +1,9 @@
 <div class="user-panel">
   <div class="pull-left image">
-    <img src="assets/img/user-default.png" class="img-circle" alt="User Image">
+    <img src="assets/img/user-default-rigth.png" class="img-circle" alt="User Image">
   </div>
   <div class="pull-left info">
     <p>{{currentUser.usuario.nombre_empleado}}</p>
-    <a><i class="fa fa-circle text-success"></i> En linea</a>
+    <a>Administrador</a>
   </div>
 </div>
-
