--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -174,7 +174,7 @@
 
     <ng-template #modalFooterAgregarCliente>
         <button nz-button nzType="default" (click)="handleCancelAgregarCliente()">Cerrar</button>
-        <button nz-button nzType="primary" (click)="onSubmitAgregarCliente()" [nzLoading]="isConfirmLoadingAgregarCliente">Guardar cambios</button>
+        <button nz-button nzType="primary" (click)="onSubmitAgregarCliente()" [nzLoading]="isConfirmLoadingAgregarCliente">Registrar</button>
     </ng-template>
 </nz-modal>
 
